--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,12 @@
 main:
   - title: "Blog Posts"
     url: /year-archive/
+
+  - title: "Tags"
+    url: /tags/
+
+  - title: "Categories"
+    url: /categories/
     
   - title: "CV"
     url: /cv/
