--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,9 @@ main:
 
   - title: "Categories"
     url: /categories/
+
+  - title: "Projects"
+    url: /projects/
     
   - title: "CV"
     url: /cv/
